# JiiShii

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
.github/workflows/: ci.yml
docs/: ADVANCED_AUTHORING.md  AUDIO_COOKBOOK.md  COMPILING_DESKTOP_PLAYER.md  ENGINE_STRUCTURE.md  GAME_PACKAGE_GUIDE.md  PHONE_APPS_COOKBOOK.md  PROGRAMMING_SCENES.md  SPRITE_COOKBOOK.md  START_HERE.md
scripts/: generate-asset-suggestions.mjs  generate-asset-suggestions.test.mjs  generate-game-manifest.mjs  generate-sprite-manifest.mjs  generate-sprite-manifest.test.mjs
src/: main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/engine/: asset-discovery.js  asset-discovery.test.js  audio-discovery.test.js  audio-service.js  audio-service.test.js  audio-state.js  audio-state.test.js  background-transitioner.js  background-transitions.js  command-meta.js  commands.js  commands.test.js  content-discovery.js  content-discovery.test.js  game-config.js  game-config.test.js  history-state.js  history-state.test.js  irl-stage-direction.js  irl-stage-direction.test.js  layer-compositor.js  markup.js  package-manifest.js  package-manifest.test.js  package-structure.test.js  persistent-features.test.js  phone-state.js  phone-state.test.js  renderer-contract.js  renderer-contract.test.js  runner.js  runner.test.js  save-format.js  save-format.test.js  showif.js  sprite-state.js  sprite-state.test.js  state.js  (+6 more)
(+117 files in other folders)
