[package]
name = "jiishii"
version = "0.1.0"
description = "JiiShii guided tour desktop wrapper"
authors = ["JiiShii"]
edition = "2021"
license = "MIT"

[lib]
name = "jiishii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
